refactor: made it work
@PraMaks & nhong